# django-telegram-support

./: .gitignore  pyproject.toml
django_telegram_support/: conf.py  views.py
django_telegram_support/templates/django_telegram_support/: support_form.html
