[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-telegram-support"
version = "0.1.0"
description = "Reusable Django support form that sends messages to Telegram"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name="Andrei Mazur", email="agrshkv@gmail.com" }]
license = { text = "MIT" }
dependencies = [
  "Django>=4.2",
  "requests>=2.31",
]

[tool.setuptools.packages.find]
include = ["django_telegram_support*"]

[tool.setuptools.package-data]
"django_telegram_support" = ["templates/django_telegram_support/*.html"]
